2006-09-08  Mark Wielaard  <mark@klomp.org>

	* TaskState.java: Merge Running and runningInSyscall states.

2006-09-07  Tom Tromey  <tromey@redhat.com>

	* Host.java (requestRefreshXXX): Fix typo.

2006-09-07  Mark Wielaard  <mark@klomp.org>

	* TaskState.java: Merge BlockedSignal, SyscallBlockedInSyscall and
	blockedInExecSyscall.

2006-09-07  Mark Wielaard  <mark@klomp.org>

	* TestSyscallSignal.java: New file.

2006-09-06  Mark Wielaard  <mark@klomp.org>

	* TaskState (transitionToSyscallRunningState): Removed, merged with
	transitionToRunningState.

2006-09-06  Phil Muldoon  <pmuldoon@redhat.com>

	* Syscall.java: numArgs, argList make public final

2006-09-06  Mark Wielaard  <mark@klomp.org>

	* TaskState.java (SyscallRunning): Removed, merged with Running.

2006-09-05  Mark Wielaard  <mark@klomp.org>

	* TaskState.java (syscallBlockedEnteringSyscall): Removed, merge
	with syscallBlockedInSyscallContinue.

2006-09-04  Mark Wielaard  <mark@klomp.org>

	* TestSyscallRunning.java: Added back, use SYSread and write to
	Socket.

2006-09-04  Yao Qi  <qiyaoltc@cn.ibm.com>

	* LinuxPPC.java (returnCode): Extract sign of return code from
	CCR register.

2006-09-01  Mark Wielaard  <mark@klomp.org>

	* TestSyscallRunning.java: Removed doesn't compile on x86.

2006-09-01  Mark Wielaard  <mark@klomp.org>

	* TaskState.java (runningInSyscall): Handle adding of Observer and
	SyscallObserver.
	* TestSyscallRunning.java: New file.

2006-09-01  Wu Zhou  <woodzltc@cn.ibm.com>

	Yong Zheng's patch to delete redundant testcases.
	2006-09-01  Yong Zheng  <zhengy@cn.ibm.com>

		* TestI386Regs.java: Delete.
		* TestX8664Regs.java: Delete.

2006-08-31  Yao Qi  <qiyaoltc@cn.ibm.com>

	* TestRegs.java: Copy the tests for length of segment registers
	from TetI386Regs.java and TestX8664Regs.java.
	New test for length of register ccr and xer on PPC64.

2006-08-30  Mark Wielaard  <mark@klomp.org>

	* TaskState.java: Merge detaching and detachingInSyscall states.
