@@ -1,3 +1,9 @@
+2006-09-08  Tom Tromey  <tromey@redhat.com>
+
+	* Host.java (requestRefreshXXX): Remove extra field from anonymous
+	class.
+	(requestCreateAttachedProc): Likewise.
+
 2006-09-08  Mark Wielaard  <mark@klomp.org>
 
 	* TaskState.java: Merge Running and runningInSyscall states.
